2010-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : add workaround to set ChannelDispatcher
	  to IChannelListener. Avoid null ChannelDispatcher in http listener.

2010-04-20  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationInvokerHandler.cs : workaround NRE issue in AsyncCallTest.
	  The original code was worse than this workaround.

2010-04-05  Atsushi Enomoto  <atsushi@ximian.com>

	* EndpointAddressMessageFilter.cs : check null arg. Return false for
	  no To header case and do not result in NRE.f

2010-04-05  Atsushi Enomoto  <atsushi@ximian.com>

	* BaseMessagesFormatter.cs : hasParameter check is incorrectly
	  restrictive to reject some kinds of pairs.

2010-04-02  Atsushi Enomoto  <atsushi@ximian.com>

	* FaultContractInfo.cs : add serializer property.

2010-04-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientOperation.cs : do not automatically fill FaultContractInfos.

2010-04-02  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationInvokerHandler.cs : implement FaultContractInfos support.
	* ErrorProcessingHandler.cs : update comment. It is not relevant.

2010-04-02  Atsushi Enomoto  <atsushi@ximian.com>

	* EndpointDispatcher.cs : fill FaultContractInfos.
	* DispatchOperation.cs : do not fill them dynamically/automatically.
	* ErrorProcessingHandler.cs : added some FIXME notes.

2010-03-30  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : differentiate EndpointNotFound and
	  ActionNotSupported so that FaultConverter can create appropriate
	  fault messages. Removed extra filter condition on null To item.
	  And create fault messages on *any* server side error, do not let
	  request client infinitely wait for the response until timeout.

	  (RunDestinationUnreachableTest() is still not working but it works
	  when it is SOAP 1.2.)

2010-03-30  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : for faults, use fault namespace, not that of
	  ReplyAction. Added FIXME comment regarding dispatcher.
